# todo

./: Guide.md  README.md  pyproject.toml  requirements.txt  todo.py
.claude/agents/: todo-spec-architect.md
.claude/skills/: generate-spec-kit-specs.md
.specify/memory/: constitution.md
history/prompts/constitution/: 1-create-todo-constitution.constitution.prompt.md
history/prompts/todo-app/: 1-create-todo-specification.spec.prompt.md  2-create-todo-implementation-plan.plan.prompt.md  3-create-todo-task-breakdown.tasks.prompt.md  4-implement-phase-1-setup.green.prompt.md  5-implement-phase-2-foundational.green.prompt.md  6-implement-user-stories-1-2.green.prompt.md  7-implement-user-stories-3-4-5.green.prompt.md
specs/todo-app/: plan.md  spec.md  tasks.md
src/: __init__.py
src/cli/: __init__.py  main.py
src/domain/: __init__.py  errors.py  task.py
src/infrastructure/: __init__.py  in_memory_repository.py
src/interfaces/: __init__.py  task_repository.py
src/use_cases/: __init__.py  add_task.py  complete_task.py  delete_task.py  update_task.py  view_tasks.py
tests/: __init__.py
tests/integration/: __init__.py  test_cli_integration.py
tests/unit/: __init__.py  test_add_task.py  test_complete_task.py  test_delete_task.py  test_in_memory_repository.py  test_update_task.py
